# wekeo_iasi_l3

./: README.md  pyproject.toml
notebooks/: download.ipynb  example_L3.ipynb  level3.ipynb  main.ipynb  reader.ipynb
wekeo_iasi_l3/: __init__.py  _test_reader.py  config.py  download.py  env.py  global_accumulator.py  iasi.py  plot_L3_FRP.py  plot_L3_IASI.py  reader.py  stubs.py
wekeo_iasi_l3/reader_l2/: reader.py
